force-app/main/default/objects/Product2/fields/BCG_Nested__c.field-meta.xml
<CustomField>
    <fullName>BCG_Nested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates we regard the solution as &apos;under BCG&apos; in terms of seller counting.</description>
    <inlineHelpText>This indicates we regard the solution as &apos;under BCG&apos; in terms of seller counting.</inlineHelpText>
    <label>BCG Nested</label>
    <type>Checkbox</type>
</CustomField>