force-app/main/default/objects/Product2/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we have this solution under a signed contract?</inlineHelpText>
    <label>Contracted</label>
    <type>Checkbox</type>
</CustomField>