force-app/main/default/objects/Product2/fields/Development_Stage__c.field-meta.xml
<CustomField>
    <fullName>Development_Stage__c</fullName>
    <description>Product/Solution stage of development</description>
    <inlineHelpText>Product/Solution stage of development</inlineHelpText>
    <label>Development Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fully developed</fullName>
                <default>true</default>
                <label>Fully developed</label>
            </value>
            <value>
                <fullName>Advanced development</fullName>
            </value>
            <value>
                <fullName>Prototype</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>