force-app/main/default/objects/Product2/fields/Easy_Installation__c.field-meta.xml
<CustomField>
    <fullName>Easy_Installation__c</fullName>
    <label>Easy Installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>