force-app/main/default/objects/Product2/fields/Free_Matches__c.field-meta.xml
<CustomField>
    <fullName>Free_Matches__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Enter 1000 if unlimited</inlineHelpText>
    <label>Free Matches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>