force-app/main/default/objects/Product2/fields/Listing_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Listing_Anniversary__c</fullName>
    <description>The date at which Listing Fee will be invoiced</description>
    <inlineHelpText>The date at which Listing Fee will be invoiced - see contract</inlineHelpText>
    <label>Listing Anniversary</label>
    <type>Date</type>
</CustomField>