force-app/main/default/objects/Product2/fields/Listing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Listing_Fee__c</fullName>
    <inlineHelpText>Annual listing fee USD. Only record this once per &apos;vendor solution&apos; - if listed twice then only record against one SF product.</inlineHelpText>
    <label>Listing Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>