force-app/main/default/objects/Product2/fields/Listing_Fee_Secured__c.field-meta.xml
<CustomField>
    <fullName>Listing_Fee_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the listing fee contractually guaranteed (checkbox=yes) or dependent on a commitment to renew/stay (checkbox=no/blank)</inlineHelpText>
    <label>Listing Fee Secured</label>
    <type>Checkbox</type>
</CustomField>