force-app/main/default/objects/Product2/fields/Marketing_Assets__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assets__c</fullName>
    <description>Links to marketing assets</description>
    <inlineHelpText>Add links to OneDrive/Sharepoint folders containing marketing assets</inlineHelpText>
    <label>Marketing Assets</label>
    <length>65535</length>
    <type>Html</type>
</CustomField>