force-app/main/default/objects/Product2/fields/Nonstandard_commercials__c.field-meta.xml
<CustomField>
    <fullName>Nonstandard_commercials__c</fullName>
    <description>Any non standard commercials?</description>
    <inlineHelpText>Any non standard commercials?</inlineHelpText>
    <label>Nonstandard commercials</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>