force-app/main/default/objects/Product2/fields/Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account which owns this Solution/Product</description>
    <inlineHelpText>Account which owns this Solution/Product</inlineHelpText>
    <label>Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>