force-app/main/default/objects/Product2/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Payment terms for transactions from contract</description>
    <inlineHelpText>Payment terms for transactions from contract</inlineHelpText>
    <label>Payment Terms</label>
    <type>TextArea</type>
</CustomField>