force-app/main/default/objects/Product2/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3D modelling</fullName>
            </value>
            <value>
                <fullName>acid dosage modelling</fullName>
            </value>
            <value>
                <fullName>advanced analytics</fullName>
            </value>
            <value>
                <fullName>advanced visualisation</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>airborne observation</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>asset lifecycle</fullName>
            </value>
            <value>
                <fullName>automation</fullName>
            </value>
            <value>
                <fullName>autonomous vehicles</fullName>
            </value>
            <value>
                <fullName>AUV</fullName>
            </value>
            <value>
                <fullName>backhoe loaders</fullName>
            </value>
            <value>
                <fullName>beneficiation</fullName>
            </value>
            <value>
                <fullName>big data</fullName>
            </value>
            <value>
                <fullName>blasting</fullName>
            </value>
            <value>
                <fullName>bucket teeth</fullName>
            </value>
            <value>
                <fullName>cargo management</fullName>
            </value>
            <value>
                <fullName>cloud</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
            <value>
                <fullName>collaboration</fullName>
            </value>
            <value>
                <fullName>commodity price prediction</fullName>
            </value>
            <value>
                <fullName>compressors</fullName>
            </value>
            <value>
                <fullName>computer numerical control machinery</fullName>
            </value>
            <value>
                <fullName>computer vision</fullName>
            </value>
            <value>
                <fullName>construction</fullName>
            </value>
            <value>
                <fullName>contaminants detection</fullName>
            </value>
            <value>
                <fullName>control valve</fullName>
            </value>
            <value>
                <fullName>conveyor belts</fullName>
            </value>
            <value>
                <fullName>corporate function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>