force-app/main/default/objects/Product2/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <description>Transaction fee which Axora charges for the product</description>
    <inlineHelpText>Transaction fee which Axora charges for the product. Estimate if not contracted.</inlineHelpText>
    <label>Transaction Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>