force-app/main/default/objects/Product2/validationRules/Product_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Code_Format</fullName>
    <active>true</active>
    <description>Check Product Code format</description>
    <errorConditionFormula>NOT( 
  REGEX(ProductCode, &quot;AX[0-9]{5}-[0-9]{2}&quot;) 
)</errorConditionFormula>
    <errorDisplayField>ProductCode</errorDisplayField>
    <errorMessage>Product Code does not match AX00000-00 format</errorMessage>
</ValidationRule>