force-app/main/default/objects/Product2/validationRules/Product_Code_Solution_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Code_Solution_Code</fullName>
    <active>true</active>
    <description>Check Product Code starts with the related Solution Code</description>
    <errorConditionFormula>NOT(
  BEGINS(ProductCode, Solution__r.Solution_Code__c)
)</errorConditionFormula>
    <errorDisplayField>ProductCode</errorDisplayField>
    <errorMessage>Product Code does not start with the related Solution Code</errorMessage>
</ValidationRule>