force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Owner_Account__c</columns>
    <columns>Easy_Installation__c</columns>
    <columns>Solution__c</columns>
    <columns>Tags__c</columns>
    <columns>Development_Stage__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>